--- a/cy-appp/package.json
+++ b/cy-appp/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.0"
+    "formik": "^2.2.9",
+    "vite": "^2.8.0",
+    "yup": "^0.32.11"
   }
 }
