--- a/cy-appp/Dockerfile
+++ b/cy-appp/Dockerfile
@@ -5,7 +5,4 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx
-EXPOSE 3000
-COPY ../nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app/dist /usr/share/nginx/html
+CMD ["npm", "run", "preview"]
