--- a/cy-appp/package.json
+++ b/cy-appp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview --host --port ${PORT-3000}"
   },
   "dependencies": {
     "axios": "^0.26.1",
