--- a/mongodb/Dockerfile
+++ b/mongodb/Dockerfile
@@ -1,7 +1,3 @@
-#Create MongoDB Image for MongoDB Tutorial Application
 FROM mongo
-MAINTAINER paulineishimwe12@gmail.com
-
 EXPOSE 27017
-# Set /usr/bin/mongod as the dockerized entry-point application
-ENTRYPOINT ["/usr/bin/mongod"]
+VOLUME [ "/var/lib/mongo" ]
