--- a/cy-app/package.json
+++ b/cy-app/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "test": "cypress open",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "cypress": "^9.5.2",
     "vite": "^2.8.0"
   }
 }
